--- a/src/templates/requests/requests.html
+++ b/src/templates/requests/requests.html
@@ -75,6 +75,7 @@
                 <div>Status</div>
                 <div>Item ID</div>
                 <div>Item Name</div>
+                <div>Category</div>
                 <div>Item Description</div>
                 <div>Request Quantity</div>
                 <div>Quantity Issued</div>
