--- a/src/templates/forms/forms.html
+++ b/src/templates/forms/forms.html
@@ -37,6 +37,7 @@
                         <i class="bi bi-chevron-expand"></i>
                     </button>
                 </div>
+                <div>Category</div>
                 <div class="table-sortable">
                     <button role="button" class="sort-btn">
                         Description
@@ -99,6 +100,7 @@
                 <div>Status</div>
                 <div>Item ID</div>
                 <div>Item Name</div>
+                <div>Category</div>
                 <div>Item Description</div>
                 <div>Request Quantity</div>
                 <div>Quantity Issued</div>
