--- a/src/templates/inventory/inventory.html
+++ b/src/templates/inventory/inventory.html
@@ -36,6 +36,7 @@
                         <i class="bi bi-chevron-expand"></i>
                     </button>
                 </div>
+                <div>Category</div>
                 <div class="table-sortable">
                     <button role="button" class="sort-btn">
                         Description
