--- a/src/templates/inventory/request.html
+++ b/src/templates/inventory/request.html
@@ -26,6 +26,7 @@
                         <i class="bi bi-chevron-expand"></i>
                     </button>
                 </div>
+                <div>Category</div>
                 <div class="table-sortable">
                     <button role="button" class="sort-btn">
                         Description
@@ -75,6 +76,7 @@
                         <i class="bi bi-chevron-expand"></i>
                     </button>
                 </div>
+                <div>Category</div>
                 <div class="table-sortable">
                     <button role="button" class="sort-btn">
                         Description
@@ -210,7 +212,7 @@
                 "items": Array.from(document.querySelectorAll(".selection-table .table-body .table-row")).map(x => {
                     return {
                         "ItemID": x.firstChild.innerHTML,
-                        "RequestQuantity": +x.children[7].firstChild.value
+                        "RequestQuantity": +x.children[8].firstChild.value
                     }
                 }),
                 "purpose": document.querySelector("#purpose").value
