--- a/src/templates/deliveries/deliveries.html
+++ b/src/templates/deliveries/deliveries.html
@@ -52,6 +52,7 @@
                     </button>
                 </div>
                 <div>Delivery Date</div>
+                <div>Source</div>
                 <div class="table-sortable">
                     <button role="button" class="sort-btn">
                         Received By
