Add error messages when server is unavailable

--- a/src/templates/deliveries/add.html
+++ b/src/templates/deliveries/add.html
@@ -211,8 +211,11 @@
             if (d.status === 500) {
                 document.querySelector(".form-bottom .form-msg").classList.add("error");
                 document.querySelector(".form-bottom .form-msg").innerHTML = `<b>ERROR:</b> ${(await d.json())['error']}`;
-
             }
+        })
+        .catch(() => {
+            document.querySelector('.form-bottom .form-msg').classList.add("error");
+            document.querySelector('.form-bottom .form-msg').innerHTML = "<b>ERROR:</b> Server unavailable. Please try again.";
         });
     })
 
