--- a/src/templates/user/add.html
+++ b/src/templates/user/add.html
@@ -145,6 +145,10 @@
                 document.querySelector(".form-bottom .form-msg").innerHTML = `<b>ERROR:</b> ${j['error']}`;
                 Array.prototype.filter.call(document.querySelectorAll(".add-table .table-body .table-row:not(#add-row)"), x => x.children[2].firstChild.value === j['email'])[0].classList.add("error");
             }
+        })
+        .catch(() => {
+            document.querySelector('.form-bottom .form-msg').classList.add("error");
+            document.querySelector('.form-bottom .form-msg').innerHTML = "<b>ERROR:</b> Server unavailable. Please try again.";
         });
     });
 
